GalleryPage: Slight improvements in metadata display. CloudSpillForwarder: only publish downloaded file once its complete to avoid concurrent clients seeing partial files

--- a/cloudspill-server/src/main/resources/css/main.css
+++ b/cloudspill-server/src/main/resources/css/main.css
@@ -86,6 +86,8 @@ h1 {
     margin: 1px;
     border-radius: 3px;
     padding: 1px;
+    line-height: 1.5em;
+
     background-color:#666;
     color: #fba;
     text-decoration: none;
@@ -96,9 +98,15 @@ h1 {
     content: "📅";
 }
 
+.metadata div {
+    margin-top: 0.5em;
+    margin-bottom:0.5em;
+}
+
 .date {
     border: white solid 1px;
-    margin: 10px 2px 10px 1px;
+    margin-left: 1px;
+    margin-right: 2px;
     border-radius: 3px;
     padding: 1px;
     background-color: #844;
